fixed Account code - place procurement details, fixed other report style,

--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
@@ -36,7 +36,7 @@
           <tr>
             <td><label>Generate Vendor Spent Report:</label></td>
             <td>
-              <button mat-raised-button (click)="GenerateVendorSpentReport()" class="split-button-left"> Generate Report
+              <button mat-raised-button (click)="ViewFilter(3,false)" class="split-button-left"> Generate Report
               </button>
               <button mat-raised-button color="primary" class="split-button-right" [matMenuTriggerFor]="menu"
                 (click)="value(3)">
