--- a/Frontend/src/app/onboard_request/request-update/request-update.component.html
+++ b/Frontend/src/app/onboard_request/request-update/request-update.component.html
@@ -56,7 +56,7 @@
     <br>
     <tr>
       <td><label>Select as preferred vendor:</label></td>
-      <td><mat-checkbox formControlName="PrefferedVendor" (click)="onPreferredChecked(i)" ></mat-checkbox></td>
+      <td><mat-checkbox formControlName="PreferedVendor" (click)="onPreferredChecked(i)" ></mat-checkbox></td>
     </tr>   
       <tr>
         <td></td>
