--- a/Frontend/src/app/delete-mandate-limit/delete-mandate-limit.component.html
+++ b/Frontend/src/app/delete-mandate-limit/delete-mandate-limit.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
-    <p>You are about to delete the Mandate Limit with amount: <strong>{{mandateLimit.ammount }}</strong></p>
+    <p>You are about to delete the Mandate Limit with amount: R<strong>{{mandateLimit.ammount }}</strong></p>
     <p>Are you sure you want to continue?</p>
 </div>
 <div mat-dialog-actions align="end" *ngIf="showConfirmationDialog == true">
@@ -19,7 +19,7 @@
 <ng-container *ngIf="showSuccessDialog == true">
     <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;">DELETE SUCCESSFUL</h1>
     <div mat-dialog-content>
-        <p>The mandate limit with amount <strong>{{ mandateLimit.ammount }}</strong> has been <strong
+        <p>The mandate limit with amount R<strong>{{ mandateLimit.ammount }}</strong> has been <strong
                 style="color:red">DELETED</strong>
             successfully!</p>
     </div>
