--- a/Frontend/src/app/view-budget-lines/view-budget-lines.component.html
+++ b/Frontend/src/app/view-budget-lines/view-budget-lines.component.html
@@ -82,7 +82,7 @@
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let BudgetLines" style="width:140px;">
 
-                <button class="noselect" (click)="DeleteBudgetLine(BudgetLines.budgetLineId)">
+                <button class="noselect" (click)="DeleteBudgetLine(BudgetLines.budgetLineId, BudgetLines.budget_Category.account_Name)">
                   <span class='text'>Delete</span>
                   <span class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>
