--- a/Frontend/src/app/create-mandate-limit/create-mandate-limit.component.html
+++ b/Frontend/src/app/create-mandate-limit/create-mandate-limit.component.html
@@ -30,8 +30,8 @@
                                     <label style=" color:black;">Date:</label>
                                     <br />
                                     <mat-form-field>
-                                        <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                            formControlName="date" id="date" [(ngModel)]="mandateLimit.date" required>
+                                        <input matInput [min]="minDate" [matDatepicker]="picker" placeholder="Choose a date"
+                                            formControlName="date" id="date" [(ngModel)]="mandateLimit.date"  required>
                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
