--- a/Frontend/src/app/edit-mandate-limit/edit-mandate-limit.component.html
+++ b/Frontend/src/app/edit-mandate-limit/edit-mandate-limit.component.html
@@ -30,7 +30,7 @@
                                     <label style=" color:black;">Date:</label>
                                     <br />
                                     <mat-form-field>
-                                        <input matInput [matDatepicker]="picker" placeholder="Choose a date"
+                                        <input matInput [matDatepicker]="picker" [min]="minDate" placeholder="Choose a date"
                                             formControlName="date" id="date" [(ngModel)]="currentMandateLimit.date"
                                             required>
                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
