--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
@@ -34,7 +34,7 @@
               </button>
           </tr>
           <tr>
-            <td><label>Generate Vendor Spent Report:</label></td>
+            <td><label>Generate Vendor Spend Report:</label></td>
             <td>
               <button mat-raised-button (click)="ViewFilter(3,false)" class="split-button-left"> Generate Report
               </button>
