--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -20,7 +20,8 @@
     <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
       Manage Budget Allocations
       <mat-icon (click)="openBudgetAllocationIFrameTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-      style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}"
+        matTooltip="Need help? Click me!"></mat-icon>
     </h1>
 
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -29,6 +30,12 @@
         routerLink="/AddBudgetAllocation">
         Create Allocation
       </button>
+
+
+      <button mat-raised-button
+        matTooltip="This will create a new PDF with all the current Consumable Details on the system"
+        style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+        (click)="ImportAllocation()">Import Allocation</button>
       <span style="flex: 1 1 auto;"></span>
 
       <mat-form-field appearance="fill"
@@ -70,10 +77,10 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
             <button mat-raised-button
-                    matTooltip="This will take you to the view budegt lines page where you can create edit or delete budget lines for this specific Budget Allocation"
-                    routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
-                    style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 135px; margin-top: 0.5%; background-color: #94CC5B;"
-                    type="button">
+              matTooltip="This will take you to the view budegt lines page where you can create edit or delete budget lines for this specific Budget Allocation"
+              routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
+              style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 135px; margin-top: 0.5%; background-color: #94CC5B;"
+              type="button">
               Budget Lines
             </button>
           </td>
@@ -83,10 +90,10 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
             <button mat-raised-button
-                    matTooltip="This will allow you to Export this specific Budget Allocation With all its Budget Lines into a Excel file that will donwload on your device."
-                    (click)="exportExcel(BudgetAllocations.budget_ID, BudgetAllocations.department.name)"
-                    style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 157px; margin-top: 0.5%; background-color: #94CC5B;"
-                    type="button">
+              matTooltip="This will allow you to Export this specific Budget Allocation With all its Budget Lines into a Excel file that will donwload on your device."
+              (click)="exportExcel(BudgetAllocations.budget_ID, BudgetAllocations.department.name)"
+              style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 157px; margin-top: 0.5%; background-color: #94CC5B;"
+              type="button">
               Export to Excell
             </button>
           </td>
@@ -97,12 +104,13 @@
           <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
 
             <button class="noselect" routerLink="/EditBudgetAllocation/{{BudgetAllocations.budget_ID}}" type="button"
-                    style="background-color: #94CC5B;">
+              style="background-color: #94CC5B;">
               <span class='text'>Edit</span>
               <span class="icon" style="border-left: 1px solid #94CC5B; ">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
                   <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                  <path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
+                  <path
+                    d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
                 </svg>
               </span>
             </button>
@@ -128,7 +136,8 @@
                       fill: #000000
                     }
                   </style>
-                  <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                  <path
+                    d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
                 </svg>
               </span>
             </button>
@@ -144,8 +153,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-      <mat-paginator style="background-color: #eee;" [length]="100" [pageSize]="10"
-                     [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+      <mat-paginator style="background-color: #eee;" [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page">
       </mat-paginator>
     </div>
   </mat-sidenav-content>
