--- a/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
+++ b/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
@@ -4,7 +4,7 @@
     REVOKE TEMPORARY ACCESS
 
   </h1>
-  <mat-icon (click)="openRevokeDelegationTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+  <mat-icon (click)="openRevokeDelegationTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help" *ngIf="showConfirmationDialog == true"
             style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
 </div>
 
