updated report download name and button style

--- a/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.html
+++ b/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.html
@@ -294,12 +294,13 @@
               </div>
             </button>
           </div>
-
-          <button mat-raised-button id="cBtn" routerLink="/PlaceProcurementRequest"
+          <div class="wrapper">
+          <button mat-raised-button id="cBtn" routerLink="/PlaceProcurementRequest" class="CloseButton"
                   style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;"
                   >
             Cancel
           </button>
+         </div>
         </div>
         </div>
       
