--- a/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
+++ b/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
@@ -175,4 +175,24 @@ label {
     }
   
 
+    .wrapper .CloseButton {
+      transform: translate(-0%, -0%) !important;
+      width: 150px !important;
+      height: 42px !important;
+      font-size: 14px !important;
+      font-weight: bold !important;
+      border: 3px solid #fe4945 !important;
+      border-radius: 5px !important;
+      background: #fff !important;
+      color: #fe4945 !important;
+      cursor: pointer !important;
+      overflow: hidden !important;
+      transition: all .35s !important;
+  
+  }
+  
+  .wrapper .CloseButton:hover {
+      background: #fe4945 !important;
+      color: #fff !important;
+  }
  
